Implemented AppConstants along with use of static keyword for better code structure and readability